add type "button" in prices and mnemonic code

--- a/src/partials/our_products.html
+++ b/src/partials/our_products.html
@@ -14,7 +14,7 @@
           />
           <h3 class="products-caption">Orange</h3>
           <p class="products-text">Dark chocolate</p>
-            <button class="products-btn">45 UAH</button>
+            <button class="products-btn" type="button">45 UAH</button>
         </li>
         <li class="products-item swiper-slide">
           <img
@@ -23,9 +23,9 @@
             alt="Apple&cranberry chocolate"
             width="230"
           />
-          <h3 class="products-caption">APPLE&CRANBERRY</h3>
+          <h3 class="products-caption">APPLE&amp;CRANBERRY</h3>
           <p class="products-text">Milk chocolate</p>
-          <button class="products-btn">50 UAH</button>
+          <button class="products-btn" type="button">50 UAH</button>
         </li>
         <li class="products-item swiper-slide">
           <img
@@ -34,9 +34,9 @@
             alt="Lime&sea salt chocolate"
             width="230"
           />
-          <h3 class="products-caption">Lime&sea salt</h3>
+          <h3 class="products-caption">Lime&amp;sea salt</h3>
           <p class="products-text">Dark chocolate</p>
-          <button class="products-btn">66 UAH</button>
+          <button class="products-btn" type="button">66 UAH</button>
         </li>
         <li class="products-item swiper-slide">
           <img
@@ -47,7 +47,7 @@
           />
           <h3 class="products-caption">Pineapple</h3>
           <p class="products-text">Dark chocolate</p>
-          <button class="products-btn">54 UAH</button>
+          <button class="products-btn" type="button">54 UAH</button>
         </li>
         <li class="products-item swiper-slide">
           <img
@@ -58,7 +58,7 @@
           />
           <h3 class="products-caption">Classic</h3>
           <p class="products-text">Milk chocolate</p>
-          <button class="products-btn">45 UAH</button>
+          <button class="products-btn" type="button">45 UAH</button>
         </li>
         <li class="products-item swiper-slide">
           <img
@@ -69,7 +69,7 @@
           />
           <h3 class="products-caption">Honey</h3>
           <p class="products-text">Milk chocolate</p>
-          <button class="products-btn">50 UAH</button>
+          <button class="products-btn" type="button">50 UAH</button>
         </li>
         <li class="products-item swiper-slide">
           <img
@@ -80,7 +80,7 @@
           />
           <h3 class="products-caption">Roasted fruits</h3>
           <p class="products-text">Dark chocolate</p>
-          <button class="products-btn">66 UAH</button>
+          <button class="products-btn" type="button">66 UAH</button>
         </li>
         <li class="products-item swiper-slide">
           <img
@@ -91,7 +91,7 @@
           />
           <h3 class="products-caption">Classic</h3>
           <p class="products-text">White chocolate</p>
-          <button class="products-btn">54 UAH</button>
+          <button class="products-btn" type="button">54 UAH</button>
         </li>
       </ul>
       <div class="products-swiper-pagination swiper-pagination"></div>
