--- a/src/css/our_products.css
+++ b/src/css/our_products.css
@@ -54,7 +54,7 @@
   font-size: 14px;
   line-height: 1.21;
   color: var(--color-black);
-  background-color: #fafafa;
+  background-color: var(--color-grey);
   border: 1px solid rgba(17, 17, 17, 0.1);
   border-radius: 100px;
   transition: color var(--time-distribution) var(--time-duration),
