--- a/src/css/unique_components.css
+++ b/src/css/unique_components.css
@@ -1,15 +1,3 @@
-@media screen and (min-width: 768px) {
-  .container-unique-components {
-      padding: 0 20px;
-    }
-  }
-
-  @media screen and (min-width: 1200px) {
-    .container-unique-components {
-        padding: 0 20px;
-      }
-    }
-
 .unique-components-text {
   width: 100%;
   margin-left: auto;
@@ -18,6 +6,22 @@
   max-width: 335px;
 }
   
+@media screen and (min-width: 768px) {
+  .unique-components-text{
+    max-width: 486px;
+    display: flex;
+    flex-wrap: wrap;
+justify-content: center;
+    }
+    }
+
+
+@media screen and (min-width: 768px) {
+  .title-unique-components {
+    max-width: 411px;
+    }
+}
+
 .title-unique-components {
   font-size: 20px;
   font-weight: 600;
@@ -39,25 +43,52 @@
   color: var(--color-orange);
 }
   
+@media screen and (min-width: 768px) {
+  .backstory-unique-components {
+    width: 486px; }
+  }
+
 .backstory-unique-components {
   text-align: center;
-  width: 335px;
+  display: flex;
   margin-bottom: 32px;
 }
   
+@media screen and (min-width: 768px) {
+  .kinds-unique-components{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;}    
+}
+
+@media screen and (min-width: 1200px) {
+  .kinds-unique-components {
+  flex-basis: calc((100% - 60px) / 4);}
+}
+
+
 .kinds-unique-components {
-  width: 100%;
-  max-width: 375px;
-  height: 1140px;
+  height: auto;
   padding: 0 20px 0 20px;
   margin-left: auto;
   margin-right: auto;
   display: flex;
   flex-wrap: wrap;
+  gap: 20px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+
+@media screen and (min-width: 768px) {
+  .block-unique-components {
+    width: 335px;
+    height: 270px;
+}
 }
 
 .block-unique-components {
-  width: 335px;
+  width: 270px;
   height: 270px;
   position: relative;
   text-align: center;
@@ -108,7 +139,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: 56px;
+  margin-left: 28px;
   margin-top: 28px;
 }
 
@@ -168,6 +199,7 @@
   height: 146px;
   padding: 0 28px;
   text-align: left;
+  overflow: auto;;
 }
 
 .product-unique-components:hover {
