--- a/src/css/how_its_made.css
+++ b/src/css/how_its_made.css
@@ -48,12 +48,21 @@
 
 .play {
   position: absolute;
-  background-image: url(../img/play.svg);
-  width: 35px;
-  height: 35px;
+  background-color: green;
+  border-radius: 50%;
+  border-color: white;
+  width: 44px;
+  height: 44px;
   top: 50%;
   left: 50%;
   transform: translate(-50%);
+}
+
+.play-svg {
+  fill: white;
+  stroke: black;
+  width: 20px;
+  height: 21px;
 }
 
 .custom-inside {
@@ -84,10 +93,10 @@
 
 @media screen and (min-width: 1200px) {
   .subtitle:after {
-    content: "";
+    content: '';
     width: 256px;
     height: 0;
-    border: 1.5px solid #D9D9D9;
+    border: 1.5px solid #d9d9d9;
     transform: rotate(90deg);
     position: absolute;
     top: 127px;
@@ -97,7 +106,7 @@
 
 .list-made .item {
   line-height: 1.29;
-  letter-spacing: -0.0em;
+  letter-spacing: -0em;
   padding-left: 16px;
   margin-bottom: 18px;
 }
@@ -131,6 +140,81 @@
 
 @media screen and (min-width: 1200px) {
   .desktop-none {
+    display: none;
+  }
+}
+
+/* =========BACKDROP========= */
+
+.backdrop {
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+
+  transition: opacity, visibility, transform;
+  transition-timing-function: cubic-bezier(0.2, 0, 0.2, 1);
+  transition-duration: 250ms;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transform: scale(1.5);
+}
+
+/* =========MODAL========= */
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 560px;
+  max-width: 100vw;
+  height: 315px;
+  background: #a5a0a0dc;
+}
+
+.modal-close-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 24px;
+  height: 24px;
+  border: #0000001a;
+  border-radius: 50%;
+  padding: 0;
+  background-color: #0000001a;
+
+  position: absolute;
+  top: 24px;
+  right: 24px;
+
+  transition: background-color;
+  transition-timing-function: cubic-bezier(0.2, 0, 0.2, 1);
+  transition-duration: 250ms;
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+  background-color: red;
+  fill: white;
+}
+
+.close-btn {
+  width: 8px;
+  height: 8px;
+  background-color: transparent;
+}
+
+@media screen and (max-width: 767px) {
+  .backdrop {
     display: none;
   }
 }
