--- a/src/partials/how_its_made.html
+++ b/src/partials/how_its_made.html
@@ -1,8 +1,15 @@
 <section id="how-its-made">
   <div class="container">
-    <h2 class="title-made">HOW IT'S <span class="title-slogan">MADE ?</span></h2>
+    <h2 class="title-made">
+      HOW IT'S <span class="title-slogan">MADE ?</span>
+    </h2>
     <div class="how-its-made">
       <div class="main-image-made">
+        <button type="button" class="play" made-modal-open>
+          <svg class="play-svg">
+            <use href="/img/play.svg"></use>
+          </svg>
+        </button>
         <picture>
           <source
             srcset="/img/made_desktop.jpg, /img/made_desktop@2x.jpg 2x"
@@ -18,11 +25,29 @@
           />
           <img class="image" src="/img/made_mobile.jpg" alt="how_its_made" />
         </picture>
-        <span class="play"></span>
+      </div>
+      <div class="backdrop is-hidden" made-modal>
+        <div class="modal">
+          <button type="button" class="modal-close-btn" made-modal-close>
+            <svg class="close-btn">
+              <use href="img/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/9MBrCCCrvDA?start=1"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
+        </div>
       </div>
       <div class="text-made">
         <h2 class="subtitle">
-          Try our chocolates today and <br> discover the perfect balance of flavor
+          Try our chocolates today and <br />
+          discover the perfect balance of flavor
         </h2>
         <ul class="list-made">
           <li class="item desktop-none">
