--- a/src/partials/how_its_made.html
+++ b/src/partials/how_its_made.html
@@ -5,7 +5,7 @@
     </h2>
     <div class="how-its-made">
       <div class="main-image-made">
-        <button type="button" class="play" made-modal-open>
+        <button type="button" class="play" data-modal-made-open>
           <svg class="play-svg">
             <use href="/img/play.svg"></use>
           </svg>
@@ -26,9 +26,9 @@
           <img class="image" src="/img/made_mobile.jpg" alt="how_its_made" />
         </picture>
       </div>
-      <div class="backdrop is-hidden" made-modal>
+      <div class="backdrop is-hidden" data-made-modal>
         <div class="modal">
-          <button type="button" class="modal-close-btn" made-modal-close>
+          <button type="button" class="modal-close-btn" data-modal-made-close>
             <svg class="close-btn">
               <use href="img/icons.svg#icon-close"></use>
             </svg>
