--- a/src/partials/how_its_made.html
+++ b/src/partials/how_its_made.html
@@ -7,7 +7,7 @@
       <div class="main-image-made">
         <button type="button" class="play" data-modal-made-open>
           <svg class="play-svg">
-            <use href="/img/play.svg"></use>
+            <use href="img/icons.svg#icon-play"></use>
           </svg>
         </button>
         <picture>
