--- a/src/partials/how_its_made.html
+++ b/src/partials/how_its_made.html
@@ -27,7 +27,7 @@
         </picture>
       </div>
       <div class="backdrop is-hidden" data-made-modal>
-        <div class="modal">
+        <div class="modal-made">
           <button type="button" class="modal-close-btn" data-modal-made-close>
             <svg class="close-btn">
               <use href="img/icons.svg#icon-close"></use>
