--- a/src/css/header.css
+++ b/src/css/header.css
@@ -125,6 +125,7 @@
   height: 100%;
 
   stroke: var(--color-white);
+  fill: transparent;
 
   transition: var(--time-duration) var(--time-distribution);
 }
