--- a/src/partials/top_sellers.html
+++ b/src/partials/top_sellers.html
@@ -44,7 +44,7 @@
 </div>
 </section>
 
-MODAL 
+<!-- MODAL  -->
 <div class="top-sellers-backdrop is-hidden" data-top-sellers-modal>
     <div class="top-sellers-modal">
       <button type="button" class="btn-modal-close-top-sellers" data-top-sellers-modal-close>
