--- a/src/css/unique_components.css
+++ b/src/css/unique_components.css
@@ -63,22 +63,24 @@ justify-content: center;
 
 @media screen and (min-width: 1200px) {
   .kinds-unique-components {
-  flex-basis: calc((100% - 60px) / 4);}
+}
 }
 
 
 .kinds-unique-components {
-  height: auto;
-  padding: 0 20px 0 20px;
-  margin-left: auto;
-  margin-right: auto;
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
-  flex-wrap: wrap;
   justify-content: center;
+
 }
 
+@media screen and (min-width: 356px) {
+  .block-unique-components {
+    width: 336px;
+    height: 270px;
+    margin-bottom: 20px;
+}
+}
 
 @media screen and (min-width: 768px) {
   .block-unique-components {
@@ -87,13 +89,21 @@ justify-content: center;
 }
 }
 
+@media screen and (min-width: 1200px) {
+  .block-unique-components {
+    width: 270px;
+    height: 270px;
+    flex-basis: calc((100% - 80px) / 4);
+}
+}
+
+
 .block-unique-components {
-  width: 270px;
-  height: 270px;
   position: relative;
   text-align: center;
   border-radius: 15px;
   background-color: var(--color-white);
+
 }
 
 .block-unique-components-wrap {
@@ -135,12 +145,32 @@ justify-content: center;
   background-color: var(--color-white);
 }
 
+@media screen and (min-width: 356px) {
+  .block-icon-unique-components {
+    margin-left: 56px;
+    margin-top: 28px;
+}
+}
+
+@media screen and (min-width: 768px) {
+  .block-icon-unique-components {
+    margin-left: 56px;
+    margin-top: 28px;
+}
+}
+
+@media screen and (min-width: 1200px) {
+  .block-icon-unique-components {
+    margin-left: 28px;
+    margin-top: 28px;
+}
+}
+
 .block-icon-unique-components {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: 28px;
-  margin-top: 28px;
+
 }
 
 .milk-choko-title-unique-components {
