--- a/src/partials/unique_components.html
+++ b/src/partials/unique_components.html
@@ -1,4 +1,5 @@
 <section>
+    <div class="container">
         <div class="container-unique-components"> 
 
     
@@ -113,5 +114,6 @@
             </li>
         </ul>
     </div>
-        </div>
+</div>
+    </div>
     </section>
