--- a/src/css/subscribe.css
+++ b/src/css/subscribe.css
@@ -18,8 +18,7 @@
         .subscribe {
             padding-top: 72px;
             padding-bottom: 72px;
-                   
-                     
+      }            
         }
 
  @media screen and (max-width: 767px) and (min-device-pixel-ratio: 2),
