--- a/src/css/subscribe.css
+++ b/src/css/subscribe.css
@@ -375,11 +375,16 @@
         padding-left: 18px;
         font-size: 14px;
         line-height: 1.214;
-        color: rgba(64, 64, 64, 0.3);
+        color: inherit;
         border: 1.5px solid rgba(17, 17, 17, 0.05);
         filter: drop-shadow(0px 5.44492px 5.44492px rgba(0, 0, 0, 0.03));
         border-radius: 25px;
 }
+
+#user_email > ::placeholder {
+        color: rgba(64, 64, 64, 0.3);
+}
+
 @media screen and (min-width: 768px) {
         #user_email {
             font-size: 18px;
