--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -15,7 +15,7 @@
         >
       </div>
 
-      <a href="#our-products" class="hero-button scroll">
+      <a href="#footer" class="hero-button scroll">
         scroll down
         <div class="elips-btn-hero">
           <svg class="icon-btn-hero">
@@ -110,14 +110,13 @@
         <div class="name-surname">
           <input
             type="text"
-            name="hero-personal-information"
+            name="hero-personal-info"
             id="hero-personal-information"
             placeholder="Name"
           />
           <input
             type="text"
             name="hero-personal-information"
-            id="hero-personal-information"
             placeholder="Surname"
           />
         </div>
@@ -150,14 +149,14 @@
       </div>
 
       <div class="item-form-hero">
-        <label for="hero-form-number">Card number</label>
+        <label for="hero-form-card-number">Card number</label>
         <div class="mc-card-logo">
           <input
             minlength="16"
             maxlength="16"
             type="text"
-            name="hero-form-number"
-            id="hero-form-number"
+            name="hero-form-card-number"
+            id="hero-form-card-number"
             placeholder="Enter card"
           />
           <div class="hero-icon-card">
