--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -35,7 +35,7 @@
                 <p class="subscribe-title-modal">Explore our <br> <span class="subscribe-title-color-second">new chocolate</span> first!</p>
                                       
                     <div class="subscribe-input-wrap">
-                        <input type="email" name="user_email" id="user_email"
+                        <input type="email" name="user_email_subscribe" id="user_email_subscribe"
                             pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" placeholder="Enter your email"/>
                             <button class="subscribe-btn-form-send" type="submit" data-subscribe-modal-close>Submit</button>
     
