Add form validation for reviews modal section. Fix avoid auto validation form.

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -36,7 +36,7 @@
       </svg>
     </button>
 
-    <form name="hero-buy-now">
+    <form name="hero-buy-now" data-form-hero>
       <h2><span class="color-title-hero">bUY</span> nOW</h2>
       <div class="slide-hero-modal hero-swiper swiper">
         <ul class="swiper-wrapper">
@@ -175,7 +175,7 @@
         ></textarea>
       </div>
 
-      <button class="hero-button сolored" data-submit-hero type="submit">
+      <button class="hero-button сolored" type="submit">
         Submit
       </button>
     </form>
