--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -15,6 +15,7 @@
               src='./img/victoria_dobrzhanska.png'
               alt='Victoria Dobrzhanska'
               width='80'
+              loading='lazy'
             />
             <h3 class='reviews-name'>Victoria Dobrzhanska</h3>
             <p class='reviews-text'>
@@ -31,6 +32,7 @@
               src='./img/nazar_babenko.png'
               alt='Nazar Babenko'
               width='80'
+              loading='lazy'
             />
             <h3 class='reviews-name'>Nazar Babenko</h3>
             <p class='reviews-text'>
@@ -51,6 +53,7 @@
               src='./img/olena_kampusch.png'
               alt='Olena Kampusch'
               width='80'
+              loading='lazy'
             />
             <h3 class='reviews-name'>Olena Kampusch</h3>
             <p class='reviews-text'>
@@ -68,6 +71,7 @@
               src='./img/natalia_sush.png'
               alt='Natalia Sus'
               width='80'
+              loading='lazy'
             />
             <h3 class='reviews-name'>Natalia Sus</h3>
             <p class='reviews-text'>
@@ -88,6 +92,7 @@
               src='./img/danilo_nottingham.png'
               alt='Danilo Nottingham'
               width='80'
+              loading='lazy'
             />
             <h3 class='reviews-name'>Danilo Nottingham</h3>
             <p class='reviews-text'>
@@ -105,6 +110,7 @@
               src='./img/irina_tydnyuk.png'
               alt='Irina Tydnyuk'
               width='80'
+              loading='lazy'
             />
             <h3 class='reviews-name'>Irina Tydnyuk</h3>
             <p class='reviews-text'>
@@ -131,14 +137,26 @@
             Leave a review
             about <span class='title-slogan'>our&nbsp;chocolate</span>
           </h2>
-          <form name='reviews-modal-form' autocomplete='off' novalidate>
+          <form name='reviews-modal-form' autocomplete='off' data-reviews-modal-form>
             <label class='reviews-modal-label'>
               <span class='visually-hidden'>Name</span>
-              <input class='reviews-modal-field' type='text' name='user-name' placeholder='Name' />
+              <input
+                class='reviews-modal-field'
+                type='text'
+                name='user-name'
+                placeholder='Name'
+                required
+              />
             </label>
             <label class='reviews-modal-label'>
               <span class='visually-hidden'>Email</span>
-              <input class='reviews-modal-field' type='email' name='user-email' placeholder='Enter your email' />
+              <input
+                class='reviews-modal-field'
+                type='email'
+                name='user-email'
+                placeholder='Enter your email'
+                required
+              />
             </label>
             <label class='reviews-modal-label'>
               <span class='visually-hidden'>Phone</span>
@@ -146,15 +164,25 @@
                 <span class='reviews-modal-field-flag-icon'></span>
                 <span class='reviews-modal-field-flag-tel'>+380</span>
               </span>
-              <input class='reviews-modal-field reviews-modal-field-phone' type='tel' name='user-phone'
-                     placeholder='Phone number' />
+              <input
+                class='reviews-modal-field reviews-modal-field-phone'
+                type='tel'
+                name='user-phone'
+                placeholder='Phone number'
+                required
+                pattern='[0-9]{9}'
+                title='Введено невірну кількість цифр'
+              />
             </label>
             <label class='reviews-modal-label reviews-modal-label--textarea'>
               <span class='visually-hidden'>Comment</span>
-              <textarea class='reviews-modal-field reviews-modal-field--textarea' name='user-message'
-                        placeholder='Enter text'></textarea>
+              <textarea
+                class='reviews-modal-field reviews-modal-field--textarea'
+                name='user-message'
+                placeholder='Enter text'
+                required></textarea>
             </label>
-            <button class='reviews-submit-button reviews-button reviews-button-secondary' type='submit'>
+            <button class='reviews-button reviews-button-secondary' type='submit'>
               Send
             </button>
           </form>
@@ -165,7 +193,11 @@
     <div class='modal-wrapper modal-wrapper-hidden' data-reviews-modal-popup-wrapper>
       <div class='modal-container'>
         <div class='modal modal-popup'>
-          <button class='modal-close-button modal-close-button-secondary' type='button' data-reviews-modal-popup-close-button>
+          <button
+            class='modal-close-button modal-close-button-secondary'
+            type='button'
+            data-reviews-modal-popup-close-button
+          >
             <svg class='modal-close-icon modal-close-icon-secondary'>
               <use href='./img/icons.svg#icon-close'></use>
             </svg>
