--- a/src/css/how_its_made.css
+++ b/src/css/how_its_made.css
@@ -46,21 +46,6 @@
   border-radius: 15px;
 }
 
-.play {
-  position: absolute;
-  background-color: transparent;
-  border: none;
-  /* width: 44px;
-  height: 44px; */
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%);
-}
-
-.play-svg {
-  width: 44px;
-  height: 44px;
-}
 
 .custom-inside {
   width: 8px;
@@ -85,19 +70,6 @@
 @media screen and (min-width: 768px) {
   .subtitle {
     margin-bottom: 28px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .subtitle:after {
-    content: '';
-    width: 256px;
-    height: 0;
-    border: 1.5px solid #d9d9d9;
-    transform: rotate(90deg);
-    position: absolute;
-    top: 127px;
-    left: 323px;
   }
 }
 
@@ -130,83 +102,24 @@
 @media screen and (min-width: 1200px) {
   .text-made {
     margin-top: 0;
-    padding-bottom: 94px;
+    padding-bottom: 34px;
     width: 516px;
   }
 }
 
-@media screen and (min-width: 1200px) {
-  .desktop-none {
-    display: none;
+iframe{
+  width: 335px;
+}
+
+@media screen and (min-width: 768px) {
+  iframe {
+    width: 614px;
   }
 }
 
-/* =========BACKDROP========= */
-
-.backdrop {
-  position: fixed;
-  z-index: 100;
-  top: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(46, 47, 66, 0.4);
-
-  transition: opacity, visibility, transform;
-  transition-timing-function: cubic-bezier(0.2, 0, 0.2, 1);
-  transition-duration: 250ms;
-}
-
-.backdrop.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-  transform: scale(1.5);
-}
-
-/* =========MODAL========= */
-
-.modal-made {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 560px;
-  max-width: 100vw;
-  height: 315px;
-  background: #a5a0a0dc;
-}
-
-.modal-close-btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  width: 24px;
-  height: 24px;
-  border: #0000001a;
-  border-radius: 50%;
-  padding: 0;
-  background-color: #ec0b0bfd;
-
-  position: absolute;
-  top: 24px;
-  right: 24px;
-  stroke: black;
-
-  transition: background-color;
-  transition-timing-function: cubic-bezier(0.2, 0, 0.2, 1);
-  transition-duration: 250ms;
-}
-
-.close-btn {
-  width: 20px;
-  height: 20px;
-  background-color: transparent;
-}
-
-@media screen and (max-width: 767px) {
-  .backdrop {
-    display: none;
+@media screen and (min-width: 1200px) {
+  iframe {
+    width: 600px;
+    height: 400px;
   }
 }
