--- a/src/partials/how_its_made.html
+++ b/src/partials/how_its_made.html
@@ -5,13 +5,13 @@
     </h2>
     <div class="how-its-made">
       <iframe
-        width="560"
-        height="315"
+      class="video-made"
         src="https://www.youtube.com/embed/9MBrCCCrvDA?start=1"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         allowfullscreen
+        loading="lazy"
       ></iframe>
       <div class="text-made">
         <h2 class="subtitle">
