--- a/src/partials/our_products.html
+++ b/src/partials/our_products.html
@@ -11,6 +11,7 @@
             src="/img/orange.png"
             alt="Orange chocolate"
             width="230"
+            loading='lazy'
           />
           <h3 class="products-caption">Orange</h3>
           <p class="products-text">Dark chocolate</p>
@@ -22,6 +23,7 @@
             src="/img/apple_cran.png"
             alt="Apple&cranberry chocolate"
             width="230"
+            loading='lazy'
           />
           <h3 class="products-caption">APPLE&amp;CRANBERRY</h3>
           <p class="products-text">Milk chocolate</p>
@@ -33,6 +35,7 @@
             src="/img/lime_salt.png"
             alt="Lime&sea salt chocolate"
             width="230"
+            loading='lazy'
           />
           <h3 class="products-caption">Lime&amp;sea salt</h3>
           <p class="products-text">Dark chocolate</p>
@@ -44,6 +47,7 @@
             src="/img/pineapple.png"
             alt="Pineapple chocolate"
             width="230"
+            loading='lazy'
           />
           <h3 class="products-caption">Pineapple</h3>
           <p class="products-text">Dark chocolate</p>
@@ -55,6 +59,7 @@
             src="/img/classic_milk.png"
             alt="Classic milk chocolate"
             width="230"
+            loading='lazy'
           />
           <h3 class="products-caption">Classic</h3>
           <p class="products-text">Milk chocolate</p>
@@ -66,6 +71,7 @@
             src="/img/honey.png"
             alt="Honey chocolate"
             width="230"
+            loading='lazy'
           />
           <h3 class="products-caption">Honey</h3>
           <p class="products-text">Milk chocolate</p>
@@ -77,6 +83,7 @@
             src="/img/roasted_fruits.png"
             alt="Roasted fruits chocolate"
             width="230"
+            loading='lazy'
           />
           <h3 class="products-caption">Roasted fruits</h3>
           <p class="products-text">Dark chocolate</p>
@@ -88,6 +95,7 @@
             src="/img/classic_white.png"
             alt="Classic white chocolate"
             width="230"
+            loading='lazy'
           />
           <h3 class="products-caption">Classic</h3>
           <p class="products-text">White chocolate</p>
