--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -56,7 +56,11 @@
                 "
                 media="(max-width:767px)"
               />
-              <img src="./img/choco_100_desktop_tablet.png" alt="choco" />
+              <img
+                src="./img/choco_100_desktop_tablet.png"
+                alt="choco"
+                loading="lazy"
+              />
             </picture>
             <div class="choco-heft"><p>100 g</p></div>
           </li>
@@ -77,7 +81,11 @@
                 "
                 media="(max-width:767px)"
               />
-              <img src="./img/choco_200_desktop_tablet.png" alt="choco" />
+              <img
+                src="./img/choco_200_desktop_tablet.png"
+                alt="choco"
+                loading="lazy"
+              />
             </picture>
             <div class="choco-heft"><p>200 g</p></div>
           </li>
@@ -97,7 +105,11 @@
                 "
                 media="(max-width:767px)"
               />
-              <img src="./img/choco_300_desktop_tablet.png" alt="choco" />
+              <img
+                src="./img/choco_300_desktop_tablet.png"
+                alt="choco"
+                loading="lazy"
+              />
             </picture>
             <div class="choco-heft"><p>300 g</p></div>
           </li>
@@ -175,9 +187,7 @@
         ></textarea>
       </div>
 
-      <button class="hero-button сolored" type="submit">
-        Submit
-      </button>
+      <button class="hero-button сolored" type="submit">Submit</button>
     </form>
   </div>
 </div>
