--- a/src/partials/top_sellers.html
+++ b/src/partials/top_sellers.html
@@ -14,16 +14,19 @@
     <img 
     class="img-chocolate"
     src="/img/buy_choco_nuts_mobile.jpg" 
-    alt="coffee">
+    alt="coffee"
+    loading="lazy">
 </picture>
-</li>
 <p class="text-about-chocolate-one">Crazy enough chocolate originates from a bean just like the coffee bean called Cacao. Cacao has been around for thousands of years and was first discovered by the Native American tribe called the Mayans.</p>
+</li>
+
+
 <li>
     <picture>
     <source srcset="/img/buy_choco_marm_desktop.jpg , /img/buy_choco_marm_desktop@2x.jpg 2x" media="(min-width: 1200px)">
     <source srcset="/img/buy_choco_marm_tablet.jpg , /img/buy_choco_marm_tablet@2x.jpg 2x" media="(min-width: 768px)">
     <source srcset="/img/buy_choco_marm_mobile.jpg , /img/buy_choco_marm_mobile@2x.jpg 2x" media="(max-width: 767px)">
-    <img class="img-chocolate" src="/img/buy_choco_marm_mobile.jpg" alt="nuts">
+    <img class="img-chocolate" src="/img/buy_choco_marm_mobile.jpg" alt="nuts" loading="lazy">
 </picture>
 </li>
 
@@ -32,12 +35,13 @@
     class="img-chocolate last"
     srcset="/img/buy_choco_desktop.jpg 1x, /img/buy_choco_desktop@2x.jpg 2x"
     src="/img/buy_choco_desktop.jpg" 
-    alt="chocolate">
+    alt="chocolate"
+    loading="lazy">
 </li>
 </ul>
 <div class="text-btm">
 <p class="text-about-chocolate-two">Crazy enough chocolate originates from a bean just like the coffee bean called Cacao. Cacao has been around for thousands of years and was first discovered by the Native American tribe called the Mayans.</p>
-<button class="btn-buy-now colored" type="buttom" data-top-sellers-modal-open>Buy now</button>
+<button class="btn-buy-now colored" type="button" data-top-sellers-modal-open>Buy now</button>
 </div>
 
 </div>
@@ -127,14 +131,13 @@
           <div class="name-surname-top-sellers">
             <input
               type="text"
-              name="top-sellers-personal-information"
+              name="top-sellers-personal-info"
               id="top-sellers-personal-information"
               placeholder="Name"
             />
             <input
               type="text"
               name="top-sellers-personal-information"
-              id="top-sellers-personal-information"
               placeholder="Surname"
             />
           </div>
@@ -173,8 +176,8 @@
               minlength="16"
               maxlength="16"
               type="text"
-              name="top-sellers-form-number"
-              id="top-sellers-form-number"
+              name="top-sellers-form-card-number"
+              id="top-sellers-form-card-number"
               placeholder="Enter card"
             />
             <div class="top-sellers-icon-card">
