--- a/src/partials/top_sellers.html
+++ b/src/partials/top_sellers.html
@@ -77,7 +77,7 @@
                   "
                   media="(max-width:767px)"
                 />
-                <img src="./img/choco_100_desktop_tablet.png" alt="choco" />
+                <img src="./img/choco_100_desktop_tablet.png" alt="choco" loading="lazy"/>
               </picture>
               <div class="choco-heft-top-sellers"><p>100 g</p></div>
             </li>
@@ -98,7 +98,7 @@
                   "
                   media="(max-width:767px)"
                 />
-                <img src="./img/choco_200_desktop_tablet.png" alt="choco" />
+                <img src="./img/choco_200_desktop_tablet.png" alt="choco" loading="lazy" />
               </picture>
               <div class="choco-heft"><p>200 g</p></div>
             </li>
@@ -118,7 +118,7 @@
                   "
                   media="(max-width:767px)"
                 />
-                <img src="./img/choco_300_desktop_tablet.png" alt="choco" />
+                <img src="./img/choco_300_desktop_tablet.png" alt="choco" loading="lazy"/>
               </picture>
               <div class="choco-heft"><p>300 g</p></div>
             </li>
