--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -18,7 +18,7 @@
                 <picture>
                     <source srcset="/img/subscribe_desktop_tablet.jpg 1x, /img/subscribe_desktop_tablet@2x.jpg 2x" media="(min-width: 768px)" type="image/jpeg">
                     <source srcset="/img/subscribe_mobile.jpg 1x, /img/subscribe_mobile@2x.jpg 2x" media="(max-width: 767px)" type="image/jpeg">
-                <img class="subscribe-modal-img" src="/img/subscribe_mobile@2x.jpg" alt="Chocolate">
+                <img class="subscribe-modal-img" src="/img/subscribe_mobile@2x.jpg" alt="Chocolate" loading="lazy">
                 </picture>
                 
             
